# x402-ramp

./: .gitignore  README.md
anchor/: docker-compose.yml  pyproject.toml
anchor/business-server/: Dockerfile  pyproject.toml  requirements.txt
anchor/business-server/app/: main.py
anchor/config/: dev.assets.yaml  dev.services.yaml  dev.stellar.toml
backend/: app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/apps/: Dockerfile  bridge.py  requirements.txt
backend/apps/app/: main.py  treasury-cli.py
backend/bindings/: pyproject.toml
backend/bindings/bindings/: evm_bridge.py  smart_wallet.py
backend/bindings/bindings.egg-info/: PKG-INFO  SOURCES.txt
backend/cache/: cache.db
backend/src/: server.js  server.js.map  server.ts  wallet.ts
backend/src/scripts/: getTokens.d.ts  getTokens.d.ts.map  getTokens.js.map  getTokens.ts
backend/src/x402_ramp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/templates/: index.html  sep24_ui.html  withdraw_ui.html
backend/tests/: test1.py  test10.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py
backend/x402_ramp/: __init__.py  core.py
contracts/solidity/: .gitignore
contracts/solidity/src/: StellarBridge.sol
contracts/soroban/: Cargo.toml
contracts/soroban/contracts/evm-bridge/: Cargo.toml
contracts/soroban/contracts/evm-bridge/src/: lib.rs  test.rs
contracts/soroban/contracts/smart-wallet/: Cargo.toml
contracts/soroban/contracts/smart-wallet/src/: lib.rs  test.rs
