[project]
name = "x402-ramp-anchor"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click",
    "diskcache>=5.6.3",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "stellar-sdk>=12.3.0",
    "web3>=7.12.1",
    "x402>=0.1.5",
]

[tool.uv.workspace]
members = [
    "business-server",
]
